As per the JDK documentation the DateFormat class is not thread safe. So the static DateFormat instance access is synchronized.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk@470 6771e1e2-0f46-0410-b5d7-d846ff89f743